plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id("com.github.spotbugs") version "6.1.11"
}

group = 'ru.katacademy.bank-app'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	compileOnly 'com.github.spotbugs:spotbugs-annotations:4.8.3'
	annotationProcessor 'com.github.spotbugs:spotbugs-annotations:4.8.3'

	testImplementation platform('org.junit:junit-bom:5.9.2')
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testImplementation 'org.mockito:mockito-core:4.8.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
	testImplementation 'org.junit.platform:junit-platform-launcher'

	compileOnly 'org.springframework.boot:spring-boot-starter-aop'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
}

test {
	useJUnitPlatform()
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/milestone' }
	maven { url = 'https://repo.spring.io/snapshot' }
}

tasks.spotbugsMain {
	reports.create("html") {
		required = true
		outputLocation = file("$rootDir/reports/spotbugs-bank-shared.html")
		setStylesheet("fancy-hist.xsl")
	}
}

check.dependsOn spotbugsMain

check.dependsOn spotbugsTest

bootJar {
	enabled = false
}

jar {
	enabled = true
}